<resources>
    <string name="app_name">Final Project</string>
    <string name="company_name">Company Name</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="apartmentNumber">Number</string>
    <string name="submitBtn">Submit</string>
    <string name="add_new_task">Add Receiver</string>
    <string name="parcel_id">Parcel Destination</string>
    <string name="time_to_deliver">Time To Deliver</string>
    <string name="date_to_deliver">Date To Deliver</string>
    <string name="title_activity_all_clients">All Clients</string>
    <string name="call">call</string>
    <string name="add_task">New Task</string>
    <string name="title_activity_show_all_tasks">All Tasks</string>
    <string name="navigate_to_location">Nav</string>
    <string name="receiver_name">Receiver Name:</string>
    <string name="standard">standard</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="sort_by_location">Sort By Location</string>
    <string name="permission_granted">All Permission Granted</string>
    <string name="permission_not_granted">Permission not granted! The Application may not work properly!</string>
    <string name="ok">OK</string>
    <string name="done">DONE</string>
    <string name="clear_pad">clear pad</string>
    <string name="save">save</string>
    <string name="agreement">agreement</string>
    <string name="sender_name">Sender Name</string>
    <string name="delete_task">Delete</string>
    <string name="date">Date</string>
    <string name="statics">Statics</string>
    <string name="time">time</string>
    <string name="register_new_client">Register New Client</string>
    <string name="finish_tasks_label">Finish Tasks</string>
    <string name="daily_tasks_label">Daily Tasks</string>
    <string name="finish_last_month_tasks">Finish last Month Tasks: </string>
    <string name="finish_last_week_tasks">Finish last week Tasks: </string>
    <string name="urgent_tasks">Urgent Tasks: </string>
    <string name="finish_from_all">Finish from All: </string>
    <string name="finish_from_daily">Finish from daily: </string>
    <string name="all_clients">All Clients</string>
    <string name="finish_tasks">Finish Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="new_client">New Client</string>
    <string name="statistics">Statistics</string>
    <string name="no_tasks_yet_nplease_enter_new_task">No Tasks yet!! \nPlease enter new task.</string>
    <string name="you_dont_have_any_clients_yet_n_please_add_new_clients">You dont have any clients yet!! \n please add new clients.</string>
    <string name="sort_by_tooLate">Sort too Late</string>
    <string name="create_another_task">create another task</string>
</resources>
