<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="axeleration.com.finalproject.NewTask"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/cityAddress"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text" />

    <EditText
        android:id="@+id/streetAddress"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/street"
        android:inputType="text" />

    <EditText
        android:id="@+id/apartmentNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/apartmentNumber"
        android:inputType="number" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitBtn"/>



</LinearLayout>
