<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="axeleration.com.finalproject.NewCustomer"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name"
            android:inputType="text"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_person_details"/>

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_phone"/>

        <EditText
            android:id="@+id/cityAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text"
            android:drawableStart="@drawable/ic_address"/>

        <EditText
            android:id="@+id/streetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:inputType="text"
            android:drawableStart="@drawable/ic_address"/>

        <EditText
            android:id="@+id/apartmentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apartmentNumber"
            android:inputType="number"
            android:drawableStart="@drawable/ic_address"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/addNewTaskCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_task"/>
        </LinearLayout>



        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitBtn"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/receiverLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:visibility="invisible"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/fullNameEditTextReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="text"
            android:drawableStart="@drawable/ic_person_details"/>

        <EditText
            android:id="@+id/phoneNumberEditTextReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_phone"/>

        <EditText
            android:id="@+id/cityAddressReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text"
            android:drawableStart="@drawable/ic_address"/>

        <EditText
            android:id="@+id/streetAddressReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:inputType="text"
            android:drawableStart="@drawable/ic_address"/>

        <EditText
            android:id="@+id/apartmentNumberReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apartmentNumber"
            android:inputType="number"
            android:drawableStart="@drawable/ic_address"/>

        <EditText
            android:id="@+id/dateToDeliver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_to_deliver"
            android:inputType="datetime"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:drawableStart="@drawable/ic_date"/>

        <EditText
            android:id="@+id/timeToDeliver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_to_deliver"
            android:inputType="time"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:drawableStart="@drawable/ic_time"/>

    </LinearLayout>


</LinearLayout>
