<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/addNewTaskBtn"
                android:contentDescription="@string/new_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/new_client"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_client"
                android:layout_gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/allTasksBtn"
                android:contentDescription="@string/title_activity_show_all_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/all_tasks"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_show_all_tasks"
                android:layout_gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/finishedTaskBtn"
                android:contentDescription="@string/finish_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/finish_tasks"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_tasks"
                android:layout_gravity="center" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/allClients"
                android:contentDescription="@string/all_clients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/all_clients"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_clients"
                android:layout_gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/daily_assignments"
                android:contentDescription="@string/daily_tasks_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/daily_task"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/daily_tasks_label" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/statistic"
                android:contentDescription="@string/statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/statistics"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statistics" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000300"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noTaskYet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_tasks_yet_nplease_enter_new_task"
            android:textSize="20sp"
            android:visibility="invisible" />

        <ListView
            android:id="@+id/listViewMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

</LinearLayout>
